[tool.poetry]
name = "ytc-yt-dlp-plugins"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "yt_dlp_plugins"}]

[tool.poetry.dependencies]
python = ">=3.8.1"
yt-dlp = "2023.11.16"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
